<resources>
    <string name="app_name">MediaBox</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="xieyi">同意《用户许可协议》《隐私协议》</string>
    <string name="input_desc">请输入手机号/地址</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="loginnow">立即登录</string>
    <string name="regnow">立即注册</string>
    <string name="next">下一步</string>
    <string name="haveaccount">已有账号，</string>
    <string name="noaccount">还没有账号，</string>
    <string name="inputpassword">请输入密码</string>
    <string name="regsuccess">注册成功！</string>
    <string name="jump">跳过，稍后在个人设置中操作</string>
    <string name="confirm">确定</string>
    <string name="mimabaohudescone">请问立即设置密码保护吗？</string>
    <string name="mimabaohudesctwo">方便今后忘记登录密码时找回密码</string>
    <string name="countrychange">国籍切换</string>
    <string name="question_one">NO.1 你的爸爸名字？</string>
    <string name="change_question">更换问题</string>
    <string name="input_ans">请输入答案</string>
    <string name="question_two">NO.2 你的第一辆汽车型号</string>
    <string name="question_three">NO.3 你的宠物名字叫什么？</string>
    <string name="finish">完成</string>
    <string name="baohuishezhichenggong">密码保护设置完成！</string>
    <string name="pro_desc_one">务必记住，修改密码和忘记密码都需要用到</string>
    <string name="pro_desc_two">温馨提示：不要截屏，建议用纸笔抄录</string>
    <string name="cancel">取消</string>
    <string name="getpassword">找回密码</string>
    <string name="commit">提交</string>
    <string name="huidazhengque">回答正确，重置密码</string>
    <string name="shezhixinmima">请设置新密码 密码不少于8位</string>
    <string name="confirmpassword">确认密码</string>
    <string name="market">市场</string>
    <string name="friend">朋友</string>
    <string name="message">消息</string>
    <string name="dynamic">动态</string>
    <string name="mine">我的</string>
    <string name="zuoping">作 品</string>
    <string name="guanzhu">关注</string>
    <string name="zhuanmaishangjiachenggong">转卖上架成功</string>
    <string name="fadongtai">发动态</string>
    <string name="discover">发现</string>
    <string name="attention">我关注的</string>
    <string name="mysend">我发的</string>
    <string name="zhuanfa">转发</string>
    <string name="buyProd">购买作品</string>
    <string name="balance">余额</string>
    <string name="pubprod">发行作品</string>
    <string name="buy_prod">已购作品</string>
    <string name="likeprod">感兴趣作品</string>
    <string name="owner">曾拥有</string>
    <string name="warning">举报</string>
    <string name="influence">影响力</string>
    <string name="search">搜索</string>
    <string name="recommend">推荐</string>
    <string name="fenlei">分类</string>
    <string name="leixing">类型</string>
    <string name="singer">歌手</string>
    <string name="personalmall">个人商城</string>
    <string name="share">分享</string>
    <string name="yuanchuangfaxing">原创发行</string>
    <string name="liulanguode">浏览过的</string>
    <string name="senddynamic">发动态</string>
    <string name="fabu">发布</string>
    <string name="inputcontent">请输入文字内容…</string>
    <string name="send">发送</string>
    <string name="fenxiangxinde">说说分享心得...</string>
    <string name="setting">设置</string>
    <string name="sex">性别</string>
    <string name="persondesc">个人介绍</string>
    <string name="nickname">昵称</string>
    <string name="denglumima">登录密码</string>
    <string name="paytype">支付方式</string>
    <string name="beifen">备份</string>
    <string name="huancunqingli">缓存清理</string>
    <string name="quite">退出登录</string>
    <string name="myaddress">我的地址</string>
    <string name="buy">购买</string>
    <string name="withdraw">提现</string>
    <string name="traderecord">交易记录</string>
    <string name="mypubprod">我发行的作品</string>
    <string name="waitsign">待对方签发</string>
    <string name="daiqianfa">待签发</string>
    <string name="ganxinqude">感兴趣的</string>
    <string name="haveowner">曾拥有的作品</string>
    <string name="report">举报</string>
    <string name="fatieli">发帖力</string>
    <string name="chuangzhaoli">创造力</string>
    <string name="sign">签发</string>
    <string name="numberselect">序号查询</string>
    <string name="inputnumber">请输入查询的序号</string>
    <string name="selectresult">查询结果</string>
    <string name="selectagain">再查询</string>
    <string name="select_return">返回</string>
    <string name="highprice">最高价</string>
    <string name="zuijinjiaoyi">最近交易</string>
    <string name="lowprice">最低价</string>
    <string name="yigoumaidexuliehao">已购买的序号</string>
    <string name="recommend_desc">谢谢购买，请给这首歌一个宝贵的评价</string>
    <string name="sendfriend">送朋友</string>
    <string name="zhuanmaizhong">转卖中</string>
    <string name="buyupt">购买UPT</string>
    <string name="confirmbuy">确定购买</string>
    <string name="inputupt">请输入数量</string>
    <string name="lijizhuanmai">立即转卖</string>
    <string name="changeprice">修改价格</string>
    <string name="quxiaozhuanmai">取消转卖</string>
    <string name="sellandsign">转卖签发</string>
    <string name="lijiqianfa">立即签发</string>
    <string name="backups">备份</string>
    <string name="backups_desc">备份个人数据（如朋友、消息、我的音乐等），更换设备时，以免数据丢失。</string>
    <string name="backupsfinish">备份完成</string>
    <string name="save">保存</string>
    <string name="person_desc">个人介绍</string>
    <string name="cacheclean">缓存已清理</string>
    <string name="women">女</string>
    <string name="man">男</string>
    <string name="headpic">头像</string>
    <string name="change">更换</string>
    <string name="loginpassword">登录密码</string>
    <string name="password">密码</string>
    <string name="chongzhi">重置</string>
    <string name="mimabaohu">密码保护</string>
    <string name="passwordchange">密码修改</string>
    <string name="oldpassword">旧密码</string>
    <string name="input">请输入</string>
    <string name="newpassword">输入新密码</string>
    <string name="confirmnewpassword">确认新密码</string>
    <string name="miambaohudesc">修改密码保护，请先输入旧的保护答案</string>
    <string name="pingjia">评价</string>
    <string name="pingjiadesc">请评价进行综合评价</string>
    <string name="pinglun">评论</string>
    <string name="pinglundesc">这一刻的评论</string>
    <string name="blessing">作者祝福</string>
    <string name="xiugai">修改</string>
    <string name="yuanfaqianfa">原发签发</string>
    <string name="sendblessing">送祝福给粉丝</string>
    <string name="signblessing">签发祝福</string>
    <string name="listen">试听</string>
    <string name="luyingdesc">长按录音</string>
    <string name="weixin">微信</string>
    <string name="visa">visa</string>
    <string name="UPT">UPT</string>
    <string name="zhifubao">支付宝</string>
    <string name="zhifufangshi">请选择支付方式</string>
    <string name="geizuozhedeliuyan">给作者的留言</string>
    <string name="hidebuy">匿名购买</string>
    <string name="total">合计</string>
    <string name="pay">立即付款</string>
    <string name="xuangou">选购</string>
    <string name="editmessage">编辑消息</string>
    <string name="allselect">全选</string>
    <string name="deletemessage">删除选中的消息</string>
    <string name="sharebuycontent">请分享您的购买心得</string>
</resources>
