<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/regsuccess"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/mimabaohudescone"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="163dp"
        android:text="@string/mimabaohudesctwo"
        android:textColor="#ffffff"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner_view_white_5radio"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:text="@string/confirm"
        android:textColor="#4a4d6f"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_jump"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner_view_white_bord_5radio"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:text="@string/jump"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>
