<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/dynamic_title_bg">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/title_white_shap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/senddynamic"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/fabu"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/inputcontent"
        android:textColor="#8989a1"
        android:textColorHint="#8989a1"
        android:textCursorDrawable="@drawable/cursor_login"
        android:textSize="14sp" />

</RelativeLayout>
