<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <FrameLayout
        android:id="@+id/fl_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/iv_back_oval" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:src="@mipmap/iv_back" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/loginpassword"
        android:textColor="#696c8d" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_view_white_5radio">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="19dp"
            android:text="@string/password"
            android:textColor="#4a4d6f"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_chongzhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="19dp"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_next_mine"
            android:text="@string/chongzhi"
            android:textColor="#a1a3b5"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_password_baohu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_chongzhi"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="19dp"
            android:text="@string/mimabaohu"
            android:textColor="#4a4d6f"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_chongzhi"
            android:layout_marginRight="15dp"
            android:layout_marginTop="19dp"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_next_mine"
            android:text="@string/setting"
            android:textColor="#a1a3b5"
            android:textSize="16sp" />

    </RelativeLayout>
</RelativeLayout>
