<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/dynamic_title_bg">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/title_white_shap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/passwordchange"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="26dp"
            android:text="@string/oldpassword"
            android:textColor="#a1a3b5" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="72dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/input"
            android:inputType="textPassword"
            android:textColor="#4a4d6f"
            android:textCursorDrawable="@drawable/cursor_login"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#a1a3b5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="26dp"
            android:text="@string/newpassword"
            android:textColor="#a1a3b5" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="72dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/input"
            android:inputType="textPassword"
            android:textColor="#4a4d6f"
            android:textCursorDrawable="@drawable/cursor_login"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#a1a3b5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="26dp"
            android:text="@string/confirmnewpassword"
            android:textColor="#a1a3b5" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="72dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/input"
            android:inputType="textPassword"
            android:textColor="#4a4d6f"
            android:textCursorDrawable="@drawable/cursor_login"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#a1a3b5" />
    </LinearLayout>
</RelativeLayout>
