<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:a_zhon="http://schemas.android.com/apk/res-auto"
    android:background="@color/login_bg">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/dynamic_title_bg">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@mipmap/title_white_shap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pingjia"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/fabu"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>

    <EditText
        android:textCursorDrawable="@drawable/cursor_login"
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/rl_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:gravity="left|top"
        android:hint="@string/sharebuycontent"
        android:textColor="#a1a3b5"
        android:textColorHint="#a1a3b5"
        android:textSize="14sp" />

    <View
        android:id="@+id/v_div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="190dp"
        android:background="#e0e1e8" />

    <TextView
        android:id="@+id/tv_eva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_div"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/pingjiadesc"
        android:textColor="#a1a3b5"
        android:textSize="14sp" />

    <com.azhong.ratingbar.RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        a_zhon:clickable="true"
        android:layout_below="@+id/tv_eva"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        a_zhon:image_height="36dp"
        a_zhon:image_padding="3dp"
        a_zhon:image_width="36dp"
        a_zhon:star="0"
        a_zhon:star_count="5"
        a_zhon:star_img="@mipmap/star_mine"
        a_zhon:unstar_img="@mipmap/empty_star" />
</RelativeLayout>
